Fixed responsiveness and overflow issues

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -143,7 +143,7 @@
 .nav-cart-count {
   position: absolute;
   top: -3px; 
-  right: 43px; 
+  right: 39px; 
   background-color: red;
   color: #fff;
   font-size: 10px;
@@ -299,7 +299,7 @@
   }
 
   .nav-cart-count {
-   right: 40px;
+   right: 36px;
   }
 
   .cart-text {
